--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    >
 
     <data>
 
         <variable
-            name="title"
+            name="artical"
             type="com.example.martiantimes.model.MartianResponse" />
 
         <variable
@@ -32,21 +30,34 @@
             android:onClick="@{clickListener::onClick}"
             android:padding="0dp">
 
+
+            <TextView
+                android:id="@+id/articleId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@{String.valueOf(artical.uuid)}"
+                android:visibility="gone"
+                app:layout_constraintEnd_toStartOf="@+id/martian_image"
+                app:layout_constraintStart_toStartOf="@+id/martian_image"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <ImageView
                 android:id="@+id/martian_image"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                android:layout_marginTop="0dp"
+                android:imageUrl="@{artical.url}"
                 android:scaleType="fitXY"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/title_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:text="@{artical.title}"
                 android:textAlignment="center"
                 android:textColor="#000000"
                 android:textSize="20sp"
@@ -55,9 +66,6 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/martian_image"
                 app:layout_constraintTop_toTopOf="parent" />
-
-
-
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
