--- a/app/src/main/res/layout/fragment_detail_article.xml
+++ b/app/src/main/res/layout/fragment_detail_article.xml
@@ -2,15 +2,10 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.DetailArticleFragment">
+    >
 
     <data>
 
-        <variable
-            name="image"
-            type="com.example.martiantimes.model.MartianResponse" />
 
         <variable
             name="artical"
@@ -32,7 +27,7 @@
             app:layout_constraintHorizontal_bias="0.481"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:imageUrl = "@{image.images}"
+            android:imageUrl = "@{artical.url}"
             />
 
         <TextView
