--- a/app/src/main/res/layout/fragment_detail_article.xml
+++ b/app/src/main/res/layout/fragment_detail_article.xml
@@ -27,7 +27,7 @@
             app:layout_constraintHorizontal_bias="0.481"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:imageUrl = "@{artical.url}"
+            android:imageUrl = "@{artical.image}"
             />
 
         <TextView
