--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -9,9 +9,9 @@
             name="artical"
             type="com.example.martiantimes.model.MartianResponse" />
 
-<!--        <variable-->
-<!--            name="clickListener"-->
-<!--            type="com.example.martiantimes.view.ClickListener" />-->
+        <variable
+            name="clickListener"
+            type="com.example.martiantimes.util.ClickListener" />
 
 
     </data>
@@ -27,20 +27,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#ffffff"
-            android:onClick="@{clickListener::onClick}"
+            android:onClick="@{clickListener.onClick()}"
             android:padding="0dp">
 
 
-<!--            <TextView-->
-<!--                android:id="@+id/articleId"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="10dp"-->
-<!--                android:text="@{String.valueOf(artical.uuid)}"-->
-<!--                android:visibility="gone"-->
-<!--                app:layout_constraintEnd_toStartOf="@+id/martian_image"-->
-<!--                app:layout_constraintStart_toStartOf="@+id/martian_image"-->
-<!--                app:layout_constraintTop_toTopOf="parent" />-->
 
             <ImageView
                 android:id="@+id/martian_image"
@@ -65,7 +55,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/martian_image"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:gravity="center_horizontal" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
