--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -19,6 +19,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="@{clickListener::onClick}"
+        android:tag="@{artical.title}"
         android:layout_margin="10dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp">
@@ -33,9 +35,11 @@
 
             <ImageView
                 android:id="@+id/martian_image"
+                android:imageUrl="@{artical.imageUrl}"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
                 android:scaleType="fitXY"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
